fix: 背景色で画像が見えなくなるので、z-indexを-1から0にする

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -34,7 +34,7 @@
   display: inline-block;
   top: 40px;
   left: -120px;
-  z-index: -1;
+  z-index: 0;
   position: absolute;
   content: url("/hero-bg.svg");
   object-fit: contain;
